# example-random-number

./: package-lock.json  package.json
src/client/: hello_world.ts  main.ts
src/program-rust/src/: helper.rs  lib.rs
src/random-number-generator/: Cargo.toml
src/random-number-generator/src/: helper.rs  lib.rs
