
[package]
name = "random-number-generator"
version = "0.0.1"
description = "Random Number Generation, using provably-fair implementation"
authors = ["Sahil Tembhare <isr.sahil.mk@gmail.com>"]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
sha2 = "0.9.8"
hmac = "0.11.0"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "random_number"
crate-type = ["cdylib", "lib"]
